# VoxelGame

./: Cargo.toml  README.md
src/: camera.rs  gBufferShader.wgsl  main.rs  model.rs  resources.rs  shader.wgsl  teapot.rs  texture.rs
src/shaders/: gBufferShader.wgsl  lightingShader.wgsl
